--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,9 @@
 <resources>
     <string name="app_name">Debelias</string>
     <string name="seconds_template">%d с.</string>
+    <string name="game_for">Игра до</string>
+    <string name="continue_game">Продолжить</string>
+    <string name="start_game">Начать</string>
+    <string name="exit_game">Завершить</string>
+    <string name="added_points_template">+%d</string>
 </resources>
